[package]
name = "ssh_keys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.33", features = ["full"] }
dirs = "5.0"
sled = "0.34"
libp2p = { version = "0.52", features = ["full"] }
